--- a/aio/tools/examples/shared/boilerplate/i18n/angular.json
+++ b/aio/tools/examples/shared/boilerplate/i18n/angular.json
@@ -36,7 +36,8 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "preserveSymlinks": true
           },
           "configurations": {
             "production": {
